changed head to say filename instead of base url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,29 +6,29 @@
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
 <!-- CSS -->
-<link rel="stylesheet" href="{{ site.baseurl }}/css/owl.carousel.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.min.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/airspace.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/ionicons.min.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/animate.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/responsive.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/owl.carousel.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/bootstrap.min.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/font-awesome.min.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/airspace.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/style.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/ionicons.min.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/animate.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/responsive.css" />
+<link rel="stylesheet" href="kirstenofarrell-dot-com/css/syntax.css" />
 
 <!-- Js -->
-<script src="/js/vendor/modernizr-2.6.2.min.js"></script>
+<script src="kirstenofarrell-dot-com/js/modernizr-2.6.2.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
-<script src="{{ site.baseurl }}/js/owl.carousel.min.js"></script>
-<script src="{{ site.baseurl }}/js/plugins.js"></script>
-<script src="{{ site.baseurl }}/js/min/waypoints.min.js"></script>
-<script src="{{ site.baseurl }}/js/jquery.counterup.js"></script>
+<script>window.jQuery || document.write('<script src="kirstenofarrell-dot-com/js/jquery-1.10.2.min.js"><\/script>')</script>
+<script src="kirstenofarrell-dot-com/js/bootstrap.min.js"></script>
+<script src="kirstenofarrell-dot-com/js/owl.carousel.min.js"></script>
+<script src="kirstenofarrell-dot-com/js/plugins.js"></script>
+<script src="kirstenofarrell-dot-com/js/min/waypoints.min.js"></script>
+<script src="kirstenofarrell-dot-com/js/jquery.counterup.js"></script>
 
 <!-- Google Map -->
 <script src="https://maps.googleapis.com/maps/api/js"></script>
-<script src="{{ site.baseurl }}/js/google-map-init.js"></script>
+<script src="kirstenofarrell-dot-com/js/google-map-init.js"></script>
 
 
-<script src="{{ site.baseurl }}/js/main.js"></script>
+<script src="kirstenofarrell-dot-com/js/main.js"></script>
