--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
         <div class="footer-manu">
           <ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="{{ site.baseurl }}/work">Resume</a></li>
+            <li><a href="/work">Resume</a></li>
             <li><a href="http://github.com/abadfish">GitHub</a></li>
-            <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+            <li><a href="/blog">Blog</a></li>
             <li><a href="http://linkedin.com/in/kirstenofarrell">LinkedIn</a></li>
           </ul>
         </div>
