--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,17 +15,17 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-              <img src="{{ site.baseurl }}/img/KO-logo.png" alt="Logo">
+              <img src="/img/KO-logo.png" alt="Logo">
             </a>
           </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-                <li><a href="{{ site.baseurl }}/work">Resume</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/work">Resume</a></li>
                 <li><a href="http://github.com/abadfish">Github</a></li>
-                <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
