--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       <div class="col-md-12">
         <div class="footer-manu">
           <ul>
-            <li><a href="{{ site.baseurl }}/">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/work">Resume</a></li>
             <li><a href="http://github.com/abadfish">GitHub</a></li>
             <li><a href="/blog">Blog</a></li>
